--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-eslint": "^9.0.0",
     "chalk": "^2.4.1",
     "eslint": "^5.5.0",
+    "handlebars": "^4.0.11",
     "pre-commit": "^1.2.2",
     "supervisor": "^0.12.0"
   }
