通过yargs模块，可以在命令行中自定义项目运行的某些配置，例如主机、端口号等，运行node src/index.js -p 9999便可在9999启动项目

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "lint": "eslint .",
     "fix": "eslint --fix ."
   },
+  "main": "src/app.js",
   "pre-commit": [
     "fix",
     "lint"
@@ -14,5 +15,8 @@
     "handlebars": "^4.0.11",
     "pre-commit": "^1.2.2",
     "supervisor": "^0.12.0"
+  },
+  "dependencies": {
+    "yargs": "^12.0.1"
   }
 }
