--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "name": "anydoor-cli",
+  "version": "0.1.0",
   "scripts": {
     "lint": "eslint .",
     "fix": "eslint --fix ."
   },
   "main": "src/app.js",
+  "bin": {
+    "anydoor-cli": "bin/anydoor"
+  },
   "pre-commit": [
     "fix",
     "lint"
@@ -17,6 +22,11 @@
     "supervisor": "^0.12.0"
   },
   "dependencies": {
-    "yargs": "^12.0.1"
+    "yargs": "^12.0.1",
+    "yargs-parser": "^10.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Patricklea/staticWebServer.git"
   }
 }
