--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "fix",
     "lint"
   ],
-  "devDependencies": {
+"dependencies": {
     "babel-eslint": "^9.0.0",
     "chalk": "^2.4.1",
     "eslint": "^5.5.0",
     "handlebars": "^4.0.11",
     "pre-commit": "^1.2.2",
-    "supervisor": "^0.12.0"
-  },
-  "dependencies": {
+    "supervisor": "^0.12.0",
     "yargs": "^12.0.1",
     "yargs-parser": "^10.1.0"
   },
