--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "src/app.js",
   "bin": {
-    "anydoor-cli": "bin/anydoor"
+    "anydoor": "bin/anydoor"
   },
   "pre-commit": [
     "fix",
